--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,7 @@ header h1 {
   border-image-slice: 1; */
   /* padding: 0 10px; */
   margin: 10px 10px;
+  padding: 0 10px;
   height: 50px;
   display: flex;
   justify-content: space-between;
@@ -1047,7 +1048,7 @@ section.penpal-wrap .share-cont button .ic-like{
   border-radius: 50%;
   border-image: linear-gradient(to right, #e5302c 0%, #2583cb 100%);
   border-image-slice: 1;
-  height: 40px;
+  height: 50px;
   margin: 20px 0;
 }
 .penpla-wrap .more button{
