--- a/css/main.css
+++ b/css/main.css
@@ -410,6 +410,7 @@ footer {
   height: 80px;
   padding: 0 10px;
   box-shadow: 0px -4px 13px 0 rgba(4, 0, 0, 0.1);
+  z-index: 100;
 }
 footer.fixed {
   clear: both;
