--- a/css/main.css
+++ b/css/main.css
@@ -407,22 +407,25 @@ footer {
   display: flex;
   justify-content: space-between;
   align-content: center;
-  height: 80px;
   padding: 0 10px;
   box-shadow: 0px -4px 13px 0 rgba(4, 0, 0, 0.1);
   z-index: 100;
+  background: #fff;
+  width: 100%;
+  height: 80px;
+
 }
 footer.fixed {
   clear: both;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 80px;
-  padding: 0 20px;
+  padding: 0 10px;
   position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
+  height: 80px;
 }
 
 footer button {
