--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
 #wrap {
   height: calc(100vh - 80px);
   overflow-y: auto;
+  border: 1px solid red;
 }
 
 header {
@@ -89,7 +90,7 @@ header h1 {
 }
 .search-wrap input[type="search"] {
   height: 35px;
-  border: 1px solid red;
+  border: none;
   width: 90%;
   appearance: none;
   background: none;
