--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,8 @@
 @import url("font.css");
 @import url("default.css");
+:root {
+  --vh: 100%;
+}
 
 html,
 body {
@@ -13,12 +16,17 @@ body {
     "Helvetica", "AppleSDGothicNeo", sans-serif;
   font-weight: 400;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  height: var(--vh);
+  height: calc(var(--vh, 1vh) * 100);
   word-spacing: -2px;
   letter-spacing: -0.45px;
-  overflow-x: hidden;
+
 }
 
+body{
+  overflow-x: hidden;
+}
 #wrap {
   height: calc(100vh - 80px);
   overflow-y: auto;
