--- a/css/main.css
+++ b/css/main.css
@@ -1073,4 +1073,110 @@ section.penpal-wrap .share-cont button .ic-like{
   width: 100%;
   height: 100%;
 }
+
+/*mybook-wrap*/
+.mybook-wrap{
+  padding: 10px 10px;
+  background-color: #fff;
+  margin-bottom: 10px;
+}
+
+.mybook-wrap .cont{
+  width:100%;
+  margin-bottom: 10px;
+}
+
+
+
+.mybook-wrap .cont  .photo {
+  width: 100%;
+  margin-bottom: 10px;
+  height: auto;
+}
+
+.mybook-wrap .cont .photo button{
+  width: 100%;
+  height: 100%;
+}
+
+.mybook-wrap .cont  .photo img {
+  width: 100%;
+  height: 100%;s
+}
+
+.mybook-wrap .cont .txt {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 100%;
+  height: 40px;
+  display: -webkit-box;
+  -webkit-line-clamp: 2; /* 라인수 */
+  -webkit-box-orient: vertical;
+  word-wrap: break-word;
+  line-height: 20px;
+  text-align: left;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+
+.mybook-wrap .share-cont{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 40px;
+}
+.mybook-wrap .share-cont button{
+  width: 100%;
+  text-align: center;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  font-size: 14px;
+  color: #666;
+}
+.mybook-wrap .share-cont button:first-child{
+  background: url(../images/ic-line-01.png) right center no-repeat;
+  background-size: 1px 25px;
+}
+.mybook-wrap .share-cont button .ic-share{
+  background: url(../images/ic-share01.png) center center no-repeat;
+  width: 25px;
+  height: 25px;
+  background-size: contain;
+  margin-right: 10px;
+}
+
+.mybook-wrap .share-cont button .ic-like{
+  background: url(../images/ic-hart-on.png) center center no-repeat;
+  width: 25px;
+  height: 25px;
+  background-size: contain;
+  margin-right: 10px;
+}
+.mybook-wrap .etc {
+  font-size: 14px;
+  color: #666;
+
+}
+.mybook-wrap .etc i {
+  vertical-align: sub;
+  width: 24px;
+  height: 24px;
+  margin-right: 10px;
+}
+
+.mybook-wrap  .etc span.view i {
+  background: url(../images/ic-eye.png) center center no-repeat;
+  background-size: 24px;
+}
+.mybook-wrap  .etc span.comment i {
+  background: url(../images/ic-comen.png) center center no-repeat;
+  background-size: 24px;
+}
+.mybook-wrap  .etc span.like i {
+  background: url(../images/ic-like-xs.png) center center no-repeat;
+  background-size: 24px;
+}
+
  
