--- a/css/style.css
+++ b/css/style.css
@@ -346,18 +346,24 @@ header h1 {
 }
 
 .nav-wrap nav {
-  display: inline-flex;
-  justify-content: start;
+  display: flex;
+  justify-content: center;
   align-items: center;
   height: 40px;
   border-bottom: 1px solid #dcdcdc;
   width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  padding: 0 10px;
 }
 
 .nav-wrap button {
   font-weight: 600;
-  flex: 1;
-  width: 20%;
+  /*flex: 1;*/
+  min-width: 20%;
+  display: inline-flex;
+  justify-content: center;
+  text-align: center;
 }
 .nav-wrap nav button.on {
   color: #e52d29;
