카카오에서 확인

--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,8 @@ body{
   overflow-y: hidden;
 }
 #wrap {
-  height: calc(100vh - 80px);
+  //height: calc(100vh - 80px);
+  border: 1px solid red;
   overflow-y: auto;
 }
 
